--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,11 @@
 {
     "extends": [
         "react-app",
-        "react-app/jest",
-        "prettier"
+        "react-app/jest"
       ],
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "@typescript-eslint/no-unused-vars": "error"
     }
 }
