--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bpg-arial": "^1.0.0",
     "bpg-nino-mtavruli": "^1.0.0",
+    "framer-motion": "^6.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.33.1",
