--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^0.27.2",
     "bpg-arial": "^1.0.0",
     "bpg-nino-mtavruli": "^1.0.0",
+    "dotenv": "^16.0.1",
     "framer-motion": "^6.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
