--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "autoprefixer": "^10.4.7",
     "babel-plugin-istanbul": "^6.1.1",
     "cypress": "^10.3.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
