--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": ["cypress", "cypress-file-upload", "node"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
