--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^28.1.3",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "bpg-arial": "^1.0.0",
     "bpg-nino-mtavruli": "^1.0.0",
@@ -64,6 +56,12 @@
     "nyc": "^15.1.0",
     "postcss": "^8.4.13",
     "prettier": "2.6.2",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "@tailwindcss/forms": "^0.5.2",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5"
+
   }
 }
